--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.0.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
-    "mongoose": "^7.6.10"
+    "mongoose": "^7.6.10",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
