--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
     "mongoose": "^7.6.10",
+    "multer": "^1.4.5-lts.1",
     "resend": "^4.0.0"
   },
   "devDependencies": {
