--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "moment": "^2.29.4",
     "mongoose": "^7.6.10",
     "multer": "^1.4.5-lts.1",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
